test[RED]: add tests for implementing jpa repostiry in coupon repository